--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>texto del documento</h1>
-    <h2>Otro texto de prueba</h2
+    <h2>Otro texto de prueba</h2>
+    <h3>Hacemos otro cambio</h3>
 </body>
 </html>
