encapsulando codigo en funciones

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curso Practico de JS</title>
 </head>
 <body>
     <h1>texto del documento</h1>
     <h2>Otro texto de prueba</h2>
     <h3>Hacemos otro cambio</h3>
 </body>
+<script src="figuras.js"></script>
 </html>
