interactuando el doom con js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Practico de JS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>texto del documento</h1>
-    <h2>Otro texto de prueba</h2>
-    <h3>Hacemos otro cambio</h3>
+    <header>
+        <h1>Figuras geometricas</h1>
+        <p>Primer curso practico de javascript</p>
+    </header>
+    <section>
+        <h2>Calcula el area y perimentro de un cuadrado</h2>
+        <form action="">
+            <label for="">Escribe cuanto miden cada lado del cuadrado</label>
+            <input item id="inputcuadrado" type="number" name="" id="">
+            <button type="button" onclick="calcularPerimetroCudrado()">Calcular el perimetro</button>
+            <button type="button" onclick="calcularAreaCuadrado()">Calcular el area</button>
+        </form>
+    </section>
 </body>
 <script src="figuras.js"></script>
 </html>
