--- a/index.html
+++ b/index.html
@@ -20,6 +20,33 @@
             <button type="button" onclick="calcularPerimetroCudrado()">Calcular el perimetro</button>
             <button type="button" onclick="calcularAreaCuadrado()">Calcular el area</button>
         </form>
+        <h2>Perimetro de un triangulo</h2>
+        <form action="">
+            <label for="">Hallaremos el perimetro del triangulo, debes ingresar los 3 lados</label> <br>
+            <input type="number" id="lado1" placeholder="lado 1">
+            <input type="number" id="lado2" placeholder="lado 2">
+            <input type="number" id="lado3" placeholder="lado 3">
+            <button type="button" onclick="calcularPerimetroTriangulo()">Calcular perimetro</button>            
+        </form>
+        <h2>Area de un triangulo</h2>
+            <form action="">
+                <label for="">Hallaremos el area de un triangulo</label><br>
+                <input type="number" id="base" placeholder="base">
+                <input type="number" id="altura" placeholder="altura">
+                <button type="button" onclick="calcularAreaTriangulo()">Calcular el Area</button>
+            </form>
+        <h2>Diametro Circulo</h2>
+        <form action="">
+            <label for="">Hallaremos el Diametro de un circulo</label> <br>
+            <input type="number" id="radio" placeholder="ingrese el radio">
+            <button type="button" onclick="calcularDiametroCirculo()">Calcular diametro circulo</button>
+        </form>
+        <h2>Circunferencia de un Circulo</h2>
+        <form action="">
+            <label for="">Hallaremos la circunferencia de un circulo</label> <br>
+            <input type="number" id="radio1" placeholder="ingrese el radio">
+            <button type="button" onclick="calcularCircunferenciaCirculo()">Calcular diametro circulo</button>
+        </form>
     </section>
 </body>
 <script src="figuras.js"></script>
