altura de un triangulo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             <input type="number" id="radio1" placeholder="ingrese el radio">
             <button type="button" onclick="calcularCircunferenciaCirculo()">Calcular diametro circulo</button>
         </form>
+        <h2>Altura de triangulo Isosceles</h2>
+        <form action="">
+            <label for="">Hallaremos la altura de un triangulo isoseles</label> <br>
+            <input type="text" name="" id="ladoTriangulo">
+            <input type="text" name="" id="baseTriangulo">
+            <button type="button" onclick="calcularAlturaTriangulo()">Calcular la altura del triangulo</button>
+
+        </form>
     </section>
 </body>
 <script src="figuras.js"></script>
